--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "test-firebase-service": "node -r esm components/FirebaseServiceTest.js"
   },
   "dependencies": {
+    "esm": "^3.2.25",
     "expo": "~38.0.8",
     "expo-status-bar": "^1.0.2",
     "firebase": "^7.20.0",
