--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "firebase": "^7.20.0",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
+    "react-editext": "^3.17.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
+    "react-native-customised-editable-picker": "0.0.14",
     "react-native-elements": "^2.3.2",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-navigation-stack": "^0.1.2",
