--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-reanimated": "^1.13.0",
     "react-native-safe-area-context": "^3.1.7",
     "react-native-screens": "^2.10.1",
+    "react-native-swipe-list-view": "^3.2.4",
     "react-native-swipeable-row": "^0.8.1",
     "react-native-table-component": "^1.2.1",
     "react-native-web": "~0.11.7",
